// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should mark the currently active child route as selected tab 1`] = `
<div
  class="container default"
>
  <div
    class="wrapper"
  >
    <div
      class="tabsWrapper"
    >
      <ul
        class="tabs"
      >
        <li
          class="tab"
        >
          <button
            title="Tab Titel 1"
          >
            Tab Titel 1
          </button>
        </li>
        <li
          class="tab selected"
        >
          <button
            disabled=""
            title="Tab Titel 2"
          >
            Tab Titel 2
          </button>
        </li>
      </ul>
    </div>
    <button
      class="button hidden"
    >
      <span
        aria-label="su-more-horizontal"
        class="su-more-horizontal"
      />
    </button>
  </div>
</div>
`;

exports[`Should mark the currently active child route as selected tab 2`] = `
<h1>
  Child
</h1>
`;

exports[`Should render the child components after the tabs 1`] = `
<div
  class="container default"
>
  <div
    class="wrapper"
  >
    <div
      class="tabsWrapper"
    >
      <ul
        class="tabs"
      >
        <li
          class="tab"
        >
          <button
            title="Tab Titel 1"
          >
            Tab Titel 1
          </button>
        </li>
        <li
          class="tab"
        >
          <button
            title="Tab Titel 2"
          >
            Tab Titel 2
          </button>
        </li>
      </ul>
    </div>
    <button
      class="button hidden"
    >
      <span
        aria-label="su-more-horizontal"
        class="su-more-horizontal"
      />
    </button>
  </div>
</div>
`;

exports[`Should render the child components after the tabs 2`] = `
<h1>
  Child
</h1>
`;
